# Packaging-example

./: .gitignore  MAKEFILE  pyproject.toml
src/package_dir/: __main__.py  package.py
